<resources>
    <string name="app_name" translatable="false">Money Lens</string>
    <string name="KRW" translatable="false">₩</string>
    <string name="JPY" translatable="false">￥</string>
    <string name="USD" translatable="false">＄</string>
    <string name="THB" translatable="false">฿</string>
    <string name="EUR" translatable="false">€</string>
    <string name="GBP" translatable="false">£</string>
    <string name="CHF" translatable="false">Fr</string>
    <string name="AUD" translatable="false">＄</string>
    <string name="CNH" translatable="false">￥</string>
    <string name="HKD" translatable="false">＄</string>
    <string name="AED" translatable="false">د.إ</string>
    <string name="BHD" translatable="false">ب.د</string>
    <string name="BND" translatable="false">$</string>
    <string name="CAD" translatable="false">＄</string>
    <string name="DKK" translatable="false">kr</string>
    <string name="IDR" translatable="false">Rp</string>
    <string name="KWD" translatable="false">د.ك</string>
    <string name="MYR" translatable="false">RM</string>
    <string name="NOK" translatable="false">kr</string>
    <string name="NZD" translatable="false">＄</string>
    <string name="SAR" translatable="false">ر.س</string>
    <string name="SEK" translatable="false">kr</string>
    <string name="SGD" translatable="false">＄</string>
    <string name="korea" translatable="false">KRW</string>
    <string name="japan" translatable="false">JPY</string>
    <string name="usa" translatable="false">USD</string>
    <string name="thailand" translatable="false">THB</string>
    <string name="uk" translatable="false">GBP</string>
    <string name="swiss" translatable="false">CHF</string>
    <string name="austraila" translatable="false">AUD</string>
    <string name="europe" translatable="false">EUR</string>
    <string name="china" translatable="false">CNH</string>
    <string name="hongkong" translatable="false">HKD</string>
    <string name="uae" translatable="false">AED</string>
    <string name="bahrain" translatable="false">BHD</string>
    <string name="brunei" translatable="false">BND</string>
    <string name="canada" translatable="false">CAD</string>
    <string name="denmark" translatable="false">DKK</string>
    <string name="indonesia" translatable="false">IDR</string>
    <string name="kuwait" translatable="false">KWD</string>
    <string name="malaysia" translatable="false">MYR</string>
    <string name="norway" translatable="false">NOK</string>
    <string name="newzealand" translatable="false">NZD</string>
    <string name="saudiarabia" translatable="false">SAR</string>
    <string name="sweden" translatable="false">SEK</string>
    <string name="singapore" translatable="false">SGD</string>
    <string name="confirm">확인</string>
    <string name="next">다음</string>
    <string name="delete">삭제하기</string>
    <string name="add">추가하기</string>
    <string name="access_title">접근권한 안내</string>
    <string name="access_title1">위치, GPS 사용 권한</string>
    <string name="access_title2">사진, 카메라 사용 권한</string>
    <string name="access_body1">리스트 생성 시 위치값 확인</string>
    <string name="access_body2">환율 확인 시 사진 촬영 및 저장 관리</string>
    <string name="app_explain1">카메라를 비추기만 하면</string>
    <string name="app_explain2">가격과 환율을 한눈에</string>
    <string name="app_explain3">MONEY LENS로</string>
    <string name="app_explain4">손쉽게 확인해보세요</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="email_login">이메일 로그인</string>
    <string name="login">로그인</string>
    <string name="id_eng">EMAIL</string>
    <string name="pw_eng">PW</string>
    <string name="find_idpw">아이디, 비밀번호 찾기</string>
    <string name="signin">SIGN IN</string>
    <string name="join_merbership">처음이신가요?</string>
    <string name="policy_title1">서비스 이용약관에</string>
    <string name="policy_title2">동의해주세요.</string>
    <string name="accept_all">네, 모두 동의합니다</string>
    <string name="essential">[필수]</string>
    <string name="optional">[선택]</string>
    <string name="policy_content1">이용약관 동의</string>
    <string name="policy_content2">개인정보 수집 및 이용 동의</string>
    <string name="policy_content3">쿠키 및 유사기술 이용 동의</string>
    <string name="login_auth_title1">본인 확인을 위해 사용하실</string>
    <string name="login_auth_title2">이메일을 입력해주세요.</string>
    <string name="email">이메일</string>
    <string name="input_email">이메일을 입력해주세요</string>
    <string name="ex_email">---@mju.ac.kr</string>
    <string name="enter_code">인증번호 입력</string>
    <string name="enter_4number">인증코드를 입력하세요</string>
    <string name="clock_max" translatable="false">3:00</string>
    <string name="new_code">새로운 코드 받기</string>
    <string name="personal_info_title1">회원 정보를</string>
    <string name="personal_info_title2">입력해주세요.</string>
    <string name="sex">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="birth_kor">생년월일</string>
    <string name="birth_eng">YY/MM/DD</string>
    <string name="id_kor">아이디</string>
    <string name="name">이름</string>
    <string name="currency1">주 통화</string>
    <string name="currency2">통화</string>
    <string name="pw_kor">비밀번호</string>
    <string name="button_id">ID 찾기</string>
    <string name="button_pw">비밀번호 재설정</string>
    <string name="find_id_title1">가입 정보로</string>
    <string name="find_id_title2">아이디를 확인하세요</string>
    <string name="find_pw_title1">비밀번호 재설정을 위한</string>
    <string name="find_pw_title2">임시 비밀번호를 발급맏으세요</string>
    <string name="submit_button_id">아이디 찾기</string>
    <string name="submit_button_pw">비밀번호 재설정 메일 요청</string>
    <string name="id_result_title1">님의 아이디는</string>
    <string name="id_result_title2">입니다.</string>
    <string name="button_to_login">로그인 화면으로</string>
    <string name="pw_result_title1">입력하신 메일로</string>
    <string name="pw_result_title2">비밀번호가 전송되었습니다</string>
    <string name="new_pw_title">새 비밀번호 설정</string>
    <string name="origin_pw">기존 비밀번호</string>
    <string name="new_pw">새 비밀번호</string>
    <string name="new_pw_again">새 비밀번호 확인</string>
    <string name="new_pw_button">새 비밀번호 설정 완료하기</string>
    <string name="product_name">상품명</string>
    <string name="product_price">상품 금액</string>
    <string name="price" translatable="false">N00,000,000</string>
    <string name="num" translatable="false">1</string>
    <string name="total_price">총 금액</string>
    <string name="count">수량</string>
    <string name="submit">적용</string>
    <string name="origin_price">원래 가격</string>
    <string name="calc_price">계산된 가격</string>
    <string name="home_title">가게 별 소비 리스트</string>
    <string name="one" translatable="false">1</string>
    <string name="per">당</string>
    <string name="direct">직접</string>
    <string name="edit_long">수정하기</string>
    <string name="select_all">전체선택</string>
    <string name="input_money">가격 입력</string>
    <string name="output_money">계산값</string>
    <string name="edit_short">수정</string>
    <string name="notice">공지사항</string>
    <string name="policy">약관 및 정책</string>
    <string name="ver_info">버전 정보</string>
    <string name="ver" translatable="false">ver. </string>
    <string name="logout">로그아웃</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="place_name">가게명</string>
    <string name="place_ex" translatable="false">H MART</string>
    <string name="before">분 전</string>
    <string name="total">총 합계</string>
    <string name="select">선택</string>
    <string name="edit_title1">수정하실 회원 정보를</string>
    <string name="edit_title2">입력해주세요.</string>
    <string name="term1">서비스 이용 약관</string>
    <string name="term2">개인 정보 처리 방침</string>
    <string name="term3">위치 기반 서비스 이용 동의</string>
    <string name="term4">기타</string>
    <string name="term_detail1">
        본 약관은 사용자가 제공하는 위치 정보 및 카메라 권한을 바탕으로, 환율 변환 및 지출 내역 관리를 제공하는 본 서비스(이하 “서비스”) 이용에 관한 조건을 규정합니다.\n
        \n
        1-1. 서비스 목적\n
	    • 본 서비스는 사용자의 위치 정보를 기반으로 가게 정보를 자동 등록하고, 카메라를 사용해 영수증 또는 숫자 데이터를 읽어 환율 계산 후 지출 내역을 관리하는 도구를 제공합니다.\n
        \n
        1-2. 사용자 의무\n
	    • 사용자는 서비스 이용 시 제공되는 데이터를 정직하게 입력해야 하며, 다른 사람의 정보를 무단으로 수집하거나 이용하지 않아야 합니다.\n
	    •사용자는 서비스 이용을 위해 정확한 권한(위치 및 카메라)에 대한 허가를 제공해야 하며, 허가가 거부될 경우 일부 기능에 제한이 있을 수 있습니다.
    </string>
    <string name="term_detail2">
        본 서비스는 사용자의 개인정보 보호에 최선을 다하며, 관련 법령을 준수합니다.\n
        \n
        2-1. 수집하는 정보\n
        &#9;1. 위치 정보\n
        &#9;• 사용자가 가게 정보를 등록하거나 지출 내역을 자동 저장하는 데 사용됩니다.\n
        &#9;•	위치 정보는 사용자가 명시적으로 허용하는 경우에만 수집됩니다.\n
        &#9;2. 카메라 권한\n
        &#9;•	사용자가 사진을 촬영해 영수증 및 숫자 정보를 추출하는 데 사용됩니다.\n
        &#9;•	본 서비스는 촬영된 이미지를 저장하지 않으며, OCR 분석 후 즉시 삭제합니다.\n
        &#9;3.	지출 내역 및 환율 정보\n
        &#9;•	사용자가 입력한 데이터는 지출 관리 및 환율 변환 기능 제공을 위해 수집됩니다.\n
        \n
        2-2. 수집한 정보의 이용 목적\n
        •	위치 정보를 기반으로 사용자가 방문한 가게를 자동 등록합니다.\n
        •	OCR 기술로 영수증 정보를 인식하고 정확한 지출 내역을 환율에 따라 변환합니다.\n
        •	사용자가 선택한 통화로 지출 내역을 요약하여 장바구니에 표시합니다.\n
        \n
        2-3. 제3자 정보 제공\n
        •	본 서비스는 사용자의 동의 없이 개인정보를 제3자에게 제공하지 않습니다.\n
        •	다만, 환율 정보를 실시간으로 제공하는 외부 API 연동이 필요할 수 있으며, 해당 데이터는 외부 서비스에 전송될 수 있습니다.\n
        \n
        2-4. 데이터 보관 및 삭제\n
        •	사용자가 제공한 모든 데이터는 서비스 이용 기간 동안 보관되며, 사용자가 계정을 삭제할 경우 모든 정보는 즉시 파기됩니다.\n
        •	사용자는 언제든지 서비스 내 설정을 통해 자신의 데이터를 관리하거나 삭제 요청을 할 수 있습니다.\n
    </string>
    <string name="term_detail3">
        본 서비스는 사용자의 위치 정보를 이용하여 보다 개인화된 가게 등록 및 지출 관리를 제공합니다. 위치 정보 사용에 대한 동의를 철회할 경우 일부 기능이 제한될 수 있습니다.
    </string>
    <string name="term_detail4">
        1. 쿠키 및 유사 기술\n
        본 서비스는 사용자의 앱 사용 패턴을 분석하고 더 나은 사용자 경험을 제공하기 위해 쿠키 및 유사 기술을 사용할 수 있습니다. 사용자는 쿠키 수집을 차단하거나 설정을 변경할 수 있습니다.\n
        \n
        2. 데이터 관리\n
        본 서비스는 SSL 암호화 기술을 사용하여 데이터를 보호하며, 권한이 없는 접근을 방지하기 위한 보안 체계를 갖추고 있습니다.\n
        \n
        3. 책임의 제한\n
	    •	본 서비스는 제공된 환율 정보 및 가게 데이터의 정확성 보장을 위해 노력하지만, 실시간 변동성에 따라 결과가 다를 수 있습니다.\n
	    •	사용자가 잘못된 데이터를 입력하거나 권한 허가를 거부하여 발생하는 문제에 대해서는 책임을 지지 않습니다.

    </string>
    <string name="unsubscribe_title">정말로 탈퇴하시겠습니까?</string>
    <string name="unsubscribe_content_title">탈퇴 전 유의사항</string>
    <string name="unsubscribe_content1">• 계정 데이터 및 지출 기록이 영구적으로 삭제됨</string>
    <string name="unsubscribe_content2">• 등록된 가게 정보 및 위치 기록이 삭제됨</string>
    <string name="unsubscribe_content3">• 재가입 시 이전 데이터는 복구되지 않음</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="password_input_title1">본인 확인을 위해</string>
    <string name="password_input_title2">비밀번호를 입력해주세요.</string>
    <string name="unsubscribe">탈퇴하기</string>
    <string name="unsubscribe_success">회원 탈퇴가 완료되었습니다</string>
    <string name="to_start">처음으로</string>
    <string name="kakao_native_app_key">6bd868dc4dfc4411b3ed036307340a65</string>
    <string name="kakao_scheme">kakao6bd868dc4dfc4411b3ed036307340a65</string>
    <string name="find_pw">비밀번호 재설정</string>
    <string name="find_id">ID 찾기</string>
    <string name="total_spend">소비 총액</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="date">일</string>
    <string name="history">소비 내역</string>
    <string name="add_sum">누적 합계</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="title">이용내역을 확인해 보세요</string>
    <string name="first_week">1주차</string>
    <string name="second_week">2주차</string>
    <string name="third_week">3주차</string>
    <string name="forth_week">4주차</string>
    <string name="fifth_week">5주차</string>
    <string name="avg">평균</string>
    <string name="compare_month_title">지난 달과 비교</string>
    <string name="compare_month_label">이번 달 지출이</string>
    <string name="up">상승</string>
    <string name="end">했어요</string>
    <string name="compare_year_title">지난 해와 비교</string>
    <string name="compare_year_label">올해 지출 금액이 작년 보다</string>
    <string name="end2">늘었어요</string>
    <string name="plus" translatable="false">+</string>
</resources>