<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/login_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_title1"
                style="@style/TextHeadingXL"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_info_title2"
                style="@style/TextHeadingXL"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="28dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/birth_kor"
                    style="@style/TextBodyS"/>
                <EditText
                    android:id="@+id/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="24dp"
                    android:hint="@string/birth_eng"
                    android:background="@drawable/round_background"
                    style="@style/TextBodyL"
                    android:focusable="false"
                    android:clickable="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/name"
                    style="@style/TextBodyS"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="24dp"
                    android:hint="@string/name"
                    android:background="@drawable/round_background"
                    style="@style/TextBodyL"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/email"
                    style="@style/TextBodyS"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/round_background"
                    android:backgroundTint="@color/gray_01"
                    android:textColor="@color/gray_06"
                    android:padding="10dp"
                    android:text="@string/ex_email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/pw_kor"
                    style="@style/TextBodyS"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="24dp"
                    android:hint="@string/pw_eng"
                    android:inputType="textPassword"
                    android:background="@drawable/round_background"
                    style="@style/TextBodyL"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_edit"
            android:layout_marginBottom="24dp"
            android:text="@string/edit_long"
            style="@style/NextButtonStyle" />
    </LinearLayout>
</LinearLayout>
