<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="193dp"
    android:orientation="vertical"
    android:background="@drawable/round_background3"
    android:backgroundTint="@color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unsubscribe_title"
                android:textColor="@color/main"
                android:layout_marginBottom="16dp"
                style="@style/TextHeadingL"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unsubscribe_content_title"
                    android:textColor="@color/gray_06"
                    android:paddingBottom="2dp"
                    style="@style/TextBodyXS"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unsubscribe_content1"
                    android:textColor="@color/gray_06"
                    style="@style/TextBodyXS"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unsubscribe_content2"
                    android:textColor="@color/gray_06"
                    style="@style/TextBodyXS"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unsubscribe_content3"
                    android:textColor="@color/gray_06"
                    style="@style/TextBodyXS"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="end"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/main"
            android:layout_marginEnd="8dp"
            style="@style/TextBodyM_bold"/>
        <TextView
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/point"
            android:padding="8dp"
            style="@style/TextBodyM_bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>