<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/login_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_input_title1"
                style="@style/TextHeadingXL"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_input_title2"
                style="@style/TextHeadingXL"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="28dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/pw_kor"
                    android:layout_marginBottom="4dp"
                    style="@style/TextBodyS"/>
                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="24dp"
                    android:hint="@string/pw_eng"
                    android:background="@drawable/round_background"
                    android:inputType="textPassword"
                    style="@style/TextBodyL"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/button_unsubscribe"
            android:layout_width="312dp"
            android:layout_height="48dp"
            android:layout_gravity="center|bottom"
            android:background="@drawable/round_background"
            android:layout_marginVertical="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unsubscribe"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/point"
                style="@style/TextLabelL"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>