<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/login_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@drawable/round_background"
            android:backgroundTint="@color/gray_01"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true">
                    <Button
                        android:id="@+id/btnFindId"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:text="@string/find_id"
                        android:background="@drawable/round_background"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/gray_06"
                        android:visibility="visible"/>
                    <TextView
                        android:id="@+id/id_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/find_id"
                        android:textColor="@color/gray_06"
                        android:visibility="invisible"
                        android:clickable="true"/>
                </FrameLayout>
                <Space
                    android:layout_width="20dp"
                    android:layout_height="match_parent"/>
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnResetPassword"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:text="@string/find_pw"
                        android:background="@drawable/round_background"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/gray_06"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/pw_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/find_pw"
                        android:textColor="@color/gray_06"
                        android:clickable="true"
                        android:visibility="visible"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_findID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_id_title1"
                style="@style/TextHeadingXL"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_id_title2"
                style="@style/TextHeadingXL"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="28dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/name"
                    style="@style/TextBodyS"/>
                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="24dp"
                    android:hint="@string/name"
                    android:background="@drawable/round_background"
                    style="@style/TextBodyL"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/birth_kor"
                    style="@style/TextBodyS"/>
                <EditText
                    android:id="@+id/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="24dp"
                    android:hint="@string/birth_eng"
                    android:background="@drawable/round_background"
                    style="@style/TextBodyL"
                    android:focusable="false"
                    android:clickable="true" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_to_id_result"
            android:layout_marginBottom="24dp"
            android:text="@string/submit_button_id"
            style="@style/NextButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_findPW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_pw_title1"
            style="@style/TextHeadingXL"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_pw_title2"
            style="@style/TextHeadingXL"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="28dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/name"
                style="@style/TextBodyS"/>
            <EditText
                android:id="@+id/editTextNamePw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="24dp"
                android:hint="@string/name"
                android:background="@drawable/round_background"
                style="@style/TextBodyL"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginBottom="4dp"
                android:text="@string/email"
                style="@style/TextBodyS"/>
            <EditText
                android:id="@+id/editTextEmailPw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="24dp"
                android:hint="@string/ex_email"
                android:background="@drawable/round_background"
                style="@style/TextBodyL"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_to_pw_result"
            android:layout_marginBottom="24dp"
            android:text="@string/submit_button_pw"
            style="@style/NextButtonStyle" />
    </LinearLayout>
</LinearLayout>
